--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,8 +10,8 @@
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet",
     "fix": "yarn lint --fix",
     "build": "tsc",
-    "local": "ts-node-dev --respawn -- main.ts",
-    "start": "ts-node -r dotenv/config main.ts"
+    "local": "ts-node-dev --respawn -- src/main.ts",
+    "start": "ts-node -r dotenv/config src/main.ts"
   },
   "dependencies": {
     "@koa/cors": "^3.1.0",
