--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,13 +6,20 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-test-renderer": "^17.0.0",
+    "axios": "^0.21.1",
+    "jest-fetch-mock": "^3.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-test-renderer": "^17.0.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
@@ -41,5 +48,6 @@
       "last 1 safari version"
     ]
   },
-	"proxy": "http://localhost:7070"
+  "jest": {},
+  "proxy": "http://localhost:7070"
 }
